<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvpndftrn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="serif-monospace"
        android:textStyle="bold"
        android:textSize="20dp"
        android:text="@string/pndftrn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edmsknnama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/msknnama"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvpndftrn" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/msknalmt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edmsknnama" />

    <RadioButton
        android:id="@+id/lk"
        android:layout_width="109dp"
        android:layout_height="29dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="44dp"
        android:text="@string/Rlk"
        app:layout_constraintStart_toEndOf="@+id/jnsklmn"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditText2" />

    <TextView
        android:id="@+id/jnsklmn"
        android:layout_width="104dp"
        android:layout_height="30dp"
        android:layout_marginTop="44dp"
        android:text="@string/tjenisklmn"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditText2" />

    <RadioButton
        android:id="@+id/pr"
        android:layout_width="112dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:text="@string/Rpr"
        app:layout_constraintStart_toEndOf="@+id/lk"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditText2" />

    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="110dp"
        android:layout_height="27dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/Konghucu"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/radioButton4" />

    <RadioButton
        android:id="@+id/radioButton9"
        android:layout_width="110dp"
        android:layout_height="27dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/Atheis"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/radioButton3" />

    <RadioButton
        android:id="@+id/radioButton6"
        android:layout_width="110dp"
        android:layout_height="27dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/Budha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/radioButton3"
        app:layout_constraintTop_toBottomOf="@+id/radioButton7" />

    <RadioButton
        android:id="@+id/radioButton8"
        android:layout_width="106dp"
        android:layout_height="23dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:text="@string/Hindu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/radioButton9"
        app:layout_constraintTop_toBottomOf="@+id/radioButton6" />

    <RadioButton
        android:id="@+id/radioButton7"
        android:layout_width="110dp"
        android:layout_height="27dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:text="@string/Katholik"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/radioButton4"
        app:layout_constraintTop_toBottomOf="@+id/pr" />

    <RadioButton
        android:id="@+id/radioButton4"
        android:layout_width="110dp"
        android:layout_height="27dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="48dp"
        android:text="@string/Kristen"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/lk" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="101dp"
        android:layout_height="26dp"
        android:text="@string/tagama"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jnsklmn"
        app:layout_constraintVertical_bias="0.218" />

    <RadioButton
        android:id="@+id/radioButton11"
        android:layout_width="110dp"
        android:layout_height="29dp"
        android:text="@string/Islam"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.401"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton9"
        app:layout_constraintVertical_bias="0.037" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="389dp"
        android:layout_height="54dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/msknalmt"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton11" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="391dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/edmasknpwd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="398dp"
        android:layout_height="47dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/erepass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="156dp"
        android:text="@string/edCancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="36dp"
        android:text="@string/edDaftar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>